<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:fillViewport="true"
    tools:context=".fragment.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.085" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toTopOf="@id/guideLineTop"
            app:srcCompat="@drawable/group_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitle"
            style="@style/textviewTitle"
            android:layout_marginTop="@dimen/_27sdp"
            android:text="@string/sign_up_to_hyperlink"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDescription"
            style="@style/textviewDescription"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/let_s_get_started"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            style="@style/bgContainer"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewEmail"
                style="@style/editTextHint"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/email"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toTopOf="@+id/constraint" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextEmail"
                style="@style/editText"
                android:layout_marginTop="@dimen/_3sdp"
                android:drawableEnd="@drawable/ic_check"
                android:hint="@string/email"
                android:lines="1"
                android:imeOptions="actionDone"
                android:text="@string/eve_holt_reqres_in"
                android:drawableTint="@color/selector_edittext_text_color"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewPassword"
                style="@style/editTextHint"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/password"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextPassword"
                style="@style/editText"
                android:layout_marginTop="@dimen/_3sdp"
                android:hint="@string/password"
                android:text="pistol"
                android:lines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/textViewPassword" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewEye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                app:srcCompat="@drawable/ic_close_eye"
                app:layout_constraintEnd_toEndOf="@id/editTextPassword"
                app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
                app:layout_constraintTop_toTopOf="@id/editTextPassword"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxTerms"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:button="@null"
                android:layout_marginTop="@dimen/_1sdp"
                android:drawableStart="@drawable/bg_checkbox"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toTopOf="@+id/textViewTermsCondition" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewTermsCondition"
                style="@style/editTextHint"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/agrees_to_the_terms_conditions_and_privacy_policy"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toEndOf="@id/checkBoxTerms"
                app:layout_constraintTop_toBottomOf="@id/editTextPassword" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignUp"
                style="@style/bgButton"
                android:layout_marginTop="@dimen/_23sdp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/checkBoxTerms" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAlreadyAccount"
            style="@style/textviewDescription"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/already_have_an_account_log_in"
            android:textColor="@color/gray"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@+id/constraint"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>