<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".fragment.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.085" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toTopOf="@id/guideLineTop"
            app:srcCompat="@drawable/group_40948" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitle"
            style="@style/textviewTitle"
            android:layout_marginTop="@dimen/_27sdp"
            android:text="@string/forgot_password_title"
            app:layout_constrainedWidth="true"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDescription"
            style="@style/textviewDescription"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/fusce_eget_molestie_maecenas_facilisi_non_blandit_lobortis_at_laoreet"
            app:layout_constrainedWidth="true"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            style="@style/bgContainer"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewEmail"
                style="@style/editTextHint"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/email"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toTopOf="@+id/constraint" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextEmail"
                style="@style/editText"
                android:layout_marginTop="@dimen/_3sdp"
                android:drawableEnd="@drawable/ic_check"
                android:drawableTint="@color/lightGreen"
                android:background="@drawable/bg_container"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSubmit"
                style="@style/bgButton"
                android:text="@string/submit"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBackLogin"
            style="@style/textviewDescription"
            android:text="@string/back_to_log_in"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintTop_toBottomOf="@+id/constraint"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>